Let passive scan extension load the scan rules
No longer have core classes load the passive scan rules which allow for
an easier migration of the passive scanner to an add-on.

Part of zaproxy/zaproxy#7959.

Signed-off-by: thc202 <thc202@gmail.com>